<resources>
    <string name="app_name">玩Android</string>
    <string name="share">分享</string>
    <string name="open_external_browser">外部浏览器打开</string>
    <string name="refresh">刷新</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_or_regist">登陆/注册</string>
    <string name="wanaandroid">玩安卓</string>
    <string name="todo">TODO</string>
    <string name="yearprogress">YEAR PROGRESS</string>
    <string name="collection">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="others">其它</string>
    <string name="text_press_again">请再点击一次退出程序</string>
    <string name="mal_title_about">关于</string>
    <string name="exit">退出</string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">日间模式</string>
    <string name="home">首页</string>
    <string name="knowledge_tree">知识体系</string>
    <string name="guidance">导航</string>
    <string name="project">项目</string>

    <!--Year Progress-->
    <string name="complete">completed</string>
    <string name="zero_percent">0%</string>
    <string name="year">2017</string>
    <string name="copy_succ">已复制到剪切板</string>
    <string name="copy">复制链接</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="progress_chanel">进度推送</string>
    <string name="action_search">搜索</string>
    <string name="nav_header_desc">头像</string>
    <string name="wechat">公众号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="re_password">确认密码</string>

    <!--Account-->
    <string name="login_success">登录成功</string>
    <!--<string name="login">LOGIN</string>-->
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">请再次输入密码</string>
    <string name="next">NEXT</string>
    <string name="register">注册</string>
    <string name="title_activity_settings">Settings</string>
    <string name="display_setting">显示设置</string>
    <string name="NIGHT_MODE_OR_NOT">要关闭自动夜间模式吗？</string>
    <string name="NIGHT_MODE_DISCUBUTION">夜间模式目前已经设定为日落时开启，日出时关闭。具体设置请参见应用设置。</string>
    <string name="OFF">关闭</string>
    <string name="TEMP_NOT">暂时不用</string>
    <string name="ON">开启</string>
    <string name="ON_BY_SUNSET">日落时自动开启</string>
    <string name="auto">自动</string>
    <string name="push_setting">推送设置</string>
    <string name="YEAR_PROGRESS_SETTING">YEAR PROGRESS推送设置</string>
    <string name="sound">声音</string>
    <string name="close">关闭</string>
    <string name="account">账号</string>
    <string name="about_and_help">关于与帮助</string>
    <string name="open_source_licence">开源许可</string>
    <string name="comment_and_feedback">评价与反馈</string>
    <string name="logout">注销</string>
    <string name="check_update">检查更新</string>
    <string name="current_version">当前版本</string>
    <string name="YEAR_PROGRESS_SETTING_DESCRIPTION">当Year Progress进度改变时是否进行推送</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>关闭</item>
        <item>开启</item>
        <item>日落时自动开启</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知设置</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="PLS_ENT_USR_OR_CODE">请输入账号密码</string>
    <string name="USERNAME_CANT_BE_NUL">用户名不能为空</string>
    <string name="PASSWORD_CANT_BE_NUL">密码不能为空</string>
    <string name="PASS_AND_REPASS_IS_NOT_EQUAL">两次输入的密码不相等</string>
    <string name="register_success">注册成功</string>
    <string name="author">作者</string>
    <string name="open_in_github">在GitHub上查看此项目</string>
    <string name="comment_for_app">为这个应用评分</string>
    <string name="feedback">反馈</string>
    <string name="mail_to_develop">发送电子邮件</string>
    <string name="confirm">确定？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="time">时间</string>
    <string name="TODO">TODO</string>
    <string name="article_collection">收藏博文</string>
    <string name="common_websites">常用网站</string>
    <string name="login_first">你需要先登录！</string>
    <string name="delete_succ">删除成功！</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="nothing_here">这里什么也没有\nㄟ( ▔, ▔ )ㄏ</string>
    <string name="wan_footer_retry">重试</string>
    <string name="collect_off_site">收藏站外文章</string>
    <string name="collect_domain">收藏网址</string>
    <string name="add_collection">添加收藏</string>
    <string name="percent">%1$d%%</string>
    <string name="share_as_text">以文本分享</string>
    <string name="copy_text">复制文本</string>
    <string name="cancel">取消</string>
    <string name="share_as_image">以图片分享</string>

</resources>
