<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play_android"
            android:icon="@drawable/ic_action_android"
            android:title="@string/wanaandroid" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_action_collection"
            android:title="@string/collection" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_action_todo"
            android:title="@string/todo" />
        <item
            android:id="@+id/nav_year_progress"
            android:icon="@drawable/ic_action_year_progress"
            android:title="@string/yearprogress" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_action_setting"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
