<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="xyz.sealynn.androidfun.module.SettingsActivity$DisplayPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/display_setting" />

    <header
        android:fragment="xyz.sealynn.androidfun.module.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="xyz.sealynn.androidfun.module.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/about_and_help" />

</preference-headers>
