<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/about_and_help"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/default_divider"
        android:dividerPadding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:showDividers="end|middle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:text="@string/about"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:text="@string/open_source_licence"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:text="@string/comment_and_feedback"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/item_check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_update"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/current_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_version" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:text="@string/logout"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>