<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="@string/zero_percent"
        android:text="@string/zero_percent"
        android:textColor="@android:color/darker_gray"
        android:textSize="48sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="@string/complete"
        android:text="@string/complete"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:progressTint="@android:color/darker_gray"
        style="?android:attr/progressBarStyleHorizontal"/>

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:contentDescription="@string/year"
        android:text="@string/year"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

</LinearLayout>