<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/add_collection"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center_vertical"
        android:onClick="addOffSideCollection"
        android:background="?android:attr/selectableItemBackground">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_collection" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/collect_off_site"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center_vertical"
        android:onClick="addDomainCollection"
        android:background="?android:attr/selectableItemBackground">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_collection" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/collect_domain"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>